--- a/vignettes/Development/Quality control/10.0 Template Model output testing.Rmd
+++ b/vignettes/Development/Quality control/10.0 Template Model output testing.Rmd
@@ -54,7 +54,7 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "nTiO2_10nm", # nanoparticle (class particle)
                           "microplastic") # microplastic (class particle)
 substance <- Potential_substances[2]
-source("baseScripts/initWorld.R")
+source("baseScripts/initWorld_onlyMolec.R")
 #source("baseScripts/initworld_onlyMolec.R")
 
 length(unique(World$kaas$process))
@@ -98,35 +98,43 @@ World$kaas
 
 ```{r}
 #Comparing K's from R model to K's from excel model
-#library(openxlsx)
-
+library(openxlsx)
+library(tidyverse)
 #read in K matrix from excel
-SBExcelName <- paste0("data/SimpleBox4.01_20230824_",substance,".xlsm") #molecular version for now
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.01_20230824_",substance,".xlsm") #molecular version for now
+
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
                   namedRegion = "K")
+SBexcel.Names <- read.xlsx(SBExcelName,
+                  colNames = FALSE,
+                  namedRegion = "box_names")
+
+colnames(SBexcel.K) <- SBexcel.Names
 
 #long format version of Excel K matrix
-colnames(SBexcel.K) <- c("aR",	"w0R",	"w1R",	"w2R",	"sd1R", "sd2R",	"s1R",	"s2R",	"s3R",	"aC",	"w0C",	"w1C",	"w2C",	"sd1C",	"sd2C",	"s1C",	"s2C",	"s3C",	"aM",	"w2M",	"w3M",	"sdM",	"sM",	"aA",	"w2A",	"w3A",	"sdA",	"sA",	"aT",	"w2T",	"w3T",	"sdT",	"sT")
-SBexcel.K$to <- c("aR",	"w0R",	"w1R",	"w2R",	"sd1R", "sd2R",	"s1R",	"s2R",	"s3R",	"aC",	"w0C",	"w1C",	"w2C",	"sd1C",	"sd2C",	"s1C",	"s2C",	"s3C",	"aM",	"w2M",	"w3M",	"sdM",	"sM",	"aA",	"w2A",	"w3A",	"sdA",	"sA",	"aT",	"w2T",	"w3T",	"sdT",	"sT")
-SBexcel.K <- pivot_longer(SBexcel.K, cols = c("aR",	"w0R",	"w1R",	"w2R",	"sd1R", "sd2R",	"s1R",	"s2R",	"s3R",	"aC",	"w0C",	"w1C",	"w2C",	"sd1C",	"sd2C",	"s1C",	"s2C",	"s3C",	"aM",	"w2M",	"w3M",	"sdM",	"sM",	"aA",	"w2A",	"w3A",	"sdA",	"sA",	"aT",	"w2T",	"w3T",	"sdT",	"sT"), values_to = "k", names_to = "from")
+# colnames(SBexcel.K) <- c("aR",	"w0R",	"w1R",	"w2R",	"sd1R", "sd2R",	"s1R",	"s2R",	"s3R",	"aC",	"w0C",	"w1C",	"w2C",	"sd1C",	"sd2C",	"s1C",	"s2C",	"s3C",	"aM",	"w2M",	"w3M",	"sdM",	"sM",	"aA",	"w2A",	"w3A",	"sdA",	"sA",	"aT",	"w2T",	"w3T",	"sdT",	"sT")
+SBexcel.K$to <-  as.character(SBexcel.Names)
+
+SBexcel.K <- pivot_longer(SBexcel.K, cols =  as.character(SBexcel.Names), values_to = "k", names_to = "from")
 
 #adding "from" and "to" acronyms to the R K matrix
 kaas <- World$kaas
 unique(kaas$fromScale)
 unique(kaas$fromSubCompart)
 
+# dit werkt zo helaas niet... 
 accronym_map <- c("marinesediment" = "sd2",
                 "freshwatersediment" = "sd1",
-                "lakesediment" = "sd3", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
+                "lakesediment" = "sd0", #SB Excel does not have this compartment. To do: can we turn this off (exclude this compartment) for testing?
                 "agriculturalsoil" = "s2",
                 "naturalsoil" = "s1",
                 "othersoil" = "s3",
                 "air" = "a",
                 "deepocean" = "w3",
                 "sea" = "w2",
-                "lake" = "w1",
-                "river" = "w0")
+                "river" = "w1",
+                "lake" = "w0")
 
 accronym_map2 <- c("Arctic" = "A",
                    "Moderate" = "M",
